# mtg-kernel

./: .gitattributes  .gitignore  COMMON_MODEL_SNAPSHOT_V1.md  CORPUS_CONTENT_LOCKS.md  CUDA_FLAT_TRAINING_GOLDEN_V1.md  Cargo.toml  EXTRACTION_PROVENANCE.md  FAST_SAMPLER_V1_VALIDATION.md  FLAT_POLICY_V1_DESIGN.md  FLAT_POLICY_V1_VALIDATION.md  NATIVE_TRAINER_SCHEDULE_V1.md  README.md  ROADMAP.md  RUNTIME_DECKS_V1_VALIDATION.md  corpus_archives_v1.json  corpus_content_locks_v1.json  pyproject.toml
.github/workflows/: ci.yml
build_support/: native_store_build_capture_v1.rs
data/: cards_v1.json  fast_sampler_candidate_vectors_v1.json  fast_sampler_decimal_oracle_v1.json  native_full_episode_trajectory_v1_goldens.json  native_opponent_sampler_vectors_v1.json  native_trainer_schedule_v1_goldens.json  pauper_pool_v1.json  pauper_support_v1.json  rally_all_policy_legal_action_width_histogram_v1.json  runtime_decks_v1.json  xmage_counter_reference_windows_v1.json
data/common_model_snapshot_v1/: manifest.json
data/flat_policy_v1/: feature_inventory_v1.json  goldens_v1.json  python_action_features_v1.json
data/flat_policy_v2/: action_contract_v2.json  feature_inventory_v2.json  goldens_v2.json  ordered_topology_audit_v2.md  python_action_features_v2.json  python_full_features_v2.json
data/native_policy_train_step_v1/: loss_reduction_intermediate_rung_v1.json  loss_reduction_true_k512_gate_v1.json  runner_fixed_train_step_goldens_v1.json
data/native_policy_value_net_v1/: runner_fixed_forward_goldens_v1.json
docs/: experimental_burn_net8_cuda_train_v1.md  experimental_burn_net8_packed_cuda_v1.md
evidence/fast_sampler/: run2.evidence.json  run2.manifest.json
mtg-kernel/: Cargo.toml  build.rs
mtg-kernel/examples/: async_rollout_diagnostic.rs  async_rollout_v2_diagnostic.rs  bench_fast_sampler.rs  bench_kernel.rs  branch_diff.rs  corpus_stats.rs  cuda_flat_training_capacity_v1.rs  experimental_burn_net8_cuda_train_v1.rs  experimental_burn_net8_packed_cuda_v1.rs  fast_sampler_diagnostic.rs  flat_action_encoder_diagnostic.rs  native_flat_tensorizer_diagnostic.rs  native_trainer_true_k512_loss_capture_v1.rs  replay_burn.rs  replay_burn_v2.rs  rollout_record.rs  walk_diff.rs
mtg-kernel/examples/bench_kernel/: fast_actor_ceiling.rs  matched_uniform_runtime.rs  three_lane_ceiling.rs
mtg-kernel/examples/data/: cuda_flat_training_independent_golden_v1.json
mtg-kernel/src/: async_flat_scored_rollout_v1.rs  async_flat_scored_rollout_v2.rs  async_rollout.rs  async_rollout_v2.rs  canonical_json_v1.rs  card_def.rs  common_model_snapshot_v1.rs  durable_move_publication_v2.rs  durable_publication_v1.rs  effect.rs  engine.rs  event.rs  experimental_burn_net8_packed_v1.rs  fast_sampler.rs  flat_action_contract_v2.rs  flat_policy_v1.rs  flat_policy_v2.rs  ids.rs  lib.rs  mana.rs  native_checkpoint_evaluator_v1.rs  native_checkpoint_inference_v1.rs  native_checkpoint_runner_v1.rs  native_flat_cpu_reference_v1.rs  native_flat_tensorizer_diagnostic_v1.rs  native_flat_tensorizer_v1.rs  native_flat_tensorizer_v2.rs  native_full_episode_trajectory_v1.rs  native_full_episode_trajectory_v1_goldens.rs  native_opponent_sampler_v1.rs  native_policy_train_step_v1.rs  native_policy_value_net_v1.rs  native_science_loop_v1.rs  native_store_production_capture_v2.rs  native_train_state_payload_v1.rs  native_trainer_schedule_v1.rs  native_trainer_v1.rs  native_training_executor_v1.rs  native_training_phase_diagnostic_v1.rs  native_training_store_bootstrap_v2.rs  (+29 more)
mtg-kernel/src/experimental_burn_net8_packed_v1/: bridge.rs  training.rs
mtg-kernel/tests/: async_rollout_v2_legacy_golden.rs  basic_land_substrate.rs  blue_blasts.rs  brainstorm.rs  burn_combat.rs  burn_goldfish.rs  cryptic_serpent.rs  deem_inferior.rs  deep_analysis.rs  fast_sampler.rs  fast_sampler_allocation.rs  flat_action_allocation.rs  flat_policy_allocation.rs  flat_policy_v1.rs  lorien_revealed.rs  mill_cards.rs  murmuring_mystic.rs  native_cli_platform_stub_v2.rs  native_store_build_capture_v1.rs  ponder.rs  preordain.rs  rally_goldfish.rs  rl_contract.rs  rl_session.rs  winding_way.rs  xmage_counter_reference_windows.rs
oracle/xmage/: DeterminizationSampler.java
python/mtg_kernel_rl/: __init__.py  action_sampling.py  artifact_io.py  artifacts.py  checkpoint.py  checkpoint_io.py  cli.py  client.py  common_model_snapshot_v1.py  determinism.py  evaluation_stats.py  evaluation_store.py  evaluator.py  features.py  model.py  output_lock.py  path_safety.py  phase_profile.py  rollout.py  runner_store.py  sampled_evaluation_store.py  sampled_evaluator.py  trainer.py  training_benchmark.py  training_store.py
python/tests/: fake_env.py  fixtures.py  test_artifacts.py  test_checkpoint.py  test_client.py  test_common_model_snapshot_v1.py  test_cuda_flat_training_golden_v1.py  test_determinism.py  test_evaluation_stats.py  test_evaluator.py  test_fast_sampler_candidate_vectors_v1.py  test_fast_sampler_oracle_generator.py  test_features.py  test_fetch_corpora.py  test_flat_policy_v1_goldens.py  test_flat_policy_v2_goldens.py  test_model.py  test_native_opponent_sampler_vectors_v1.py  test_native_policy_loss_reduction_rung_v1.py  test_native_policy_loss_reduction_true_k512_gate_logic_v1.py  test_native_policy_train_step_v1_goldens.py  test_native_policy_value_net_v1_goldens.py  test_pauper_pool_manifest.py  test_phase_profile.py  test_python_action_features_v1_goldens.py  test_python_action_features_v2_goldens.py  test_python_full_features_v2_goldens.py  test_real_env.py  test_rollout.py  test_runner_store.py  test_sampled_evaluator.py  test_trainer.py  test_training_benchmark.py  test_training_store.py
python/tools/: evaluate_native_policy_loss_reduction_true_k512_v1.py  fetch_corpora.py  generate_common_model_snapshot_v1.py  generate_cuda_flat_training_golden_v1.py  generate_fast_sampler_candidate_vectors_v1.py  generate_fast_sampler_oracle_v1.py  generate_flat_policy_v1_goldens.py  generate_flat_policy_v2_goldens.py  generate_native_full_episode_trajectory_v1_goldens.py  generate_pauper_manifests.py  (+8 more)
scripts/: verify_all.sh
(+9 files in other folders)
