[package]
name = "mtg-kernel"
version = "0.0.4"
edition.workspace = true

[dependencies]
burn = { version = "=0.21.0", default-features = false, features = ["std", "autodiff"], optional = true }
burn-cuda = { version = "=0.21.0", default-features = false, features = ["std"], optional = true }
cudarc = { version = "=0.19.8", default-features = false, features = ["std", "driver", "runtime", "nvrtc", "cublas", "cuda-12080", "dynamic-loading"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[features]
# PERFORMANCE-ONLY instrumentation for examples/bench_kernel.rs (section 5,
# allocator profile): installs a counting global allocator wrapping the
# system allocator. Off by default; no effect on any normal build/test.
count_allocs = []
cuda-flat-training-capacity-v1 = ["dep:cudarc"]
# Experimental production-parameter forward backend. This is deliberately
# opt-in and is not a matched-training or evidence identity.
experimental-burn-net8-packed-cuda-v1 = ["dep:burn", "dep:burn-cuda", "dep:cudarc"]
# Audit-only flat action shape, cached-binding, hash-cost, and cache-rebuild
# probes used by the noncanonical capacity diagnostic. Off by default so the
# production API cannot bypass encode to obtain a consumable binding.
flat-action-diagnostic = []
# Environment-only microprofile for the production V2 full tensorizer. The
# feature exposes no trainer or model shortcut and is off in normal builds.
native-flat-tensorizer-diagnostic = []
# Windows-only production admission for the native V2 training-store writer.
# Non-Windows builds retain parser/stub support but never emit a production
# build-capture tuple.
native-training-store-v2-production = []

[[bin]]
name = "mtg-kernel-native"
path = "src/bin/mtg-kernel-native.rs"
required-features = ["native-training-store-v2-production"]

[[example]]
name = "cuda_flat_training_capacity_v1"
required-features = ["cuda-flat-training-capacity-v1"]

[[example]]
name = "experimental_burn_net8_packed_cuda_v1"
required-features = ["experimental-burn-net8-packed-cuda-v1"]

[[example]]
name = "experimental_burn_net8_cuda_train_v1"
required-features = ["experimental-burn-net8-packed-cuda-v1"]

[[example]]
name = "flat_action_encoder_diagnostic"
required-features = ["flat-action-diagnostic"]

[[example]]
name = "native_flat_tensorizer_diagnostic"
required-features = ["native-flat-tensorizer-diagnostic"]

[build-dependencies]
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"

[dev-dependencies]
semver = "1"
toml = "0.8"
